--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,15 +4,16 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    {{!-- jQuery --}}
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    {{!-- materialize/internal css files --}}
     <link href="../../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="../../css/ath.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="../../css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="../../css/main.css" type="text/css" rel="stylesheet" media="screen,projection" />
-    {{!-- <script src="../../routes/htmlRoutes.js"></script> --}}
+    {{!-- internal js file --}}
     <script src="../../js/main.js"></script>
     <link rel="shortcut icon" type="image/jpg" href="images/logo.png">
     <title>Pet Cupid</title>
