--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -2,7 +2,7 @@
 <div class="parallax-container">
   <div class="parallax"><img src="images/doggies.png" alt="cat and dog snuggling"></div>
 </div>
-
+{{!-- button that reloads page to delay displaying results --}}
 <section id="reload">
   <div class="container">
   <h1>Thanks for visting <span style="color:rgb(63, 70, 158); font-weight: 400;">Pets Cupid.com.</span> We are glad to provide you with your top pet matches and hope that our pets can find a home with you.</h1>
@@ -13,7 +13,7 @@
 <div class="section white results-section">
     <div class="row container center">
         <div class="row container center">
-              
+              {{!-- display top 5 pets --}}
           {{#each results}}
             <div class="col s12">
                 <div class="card horizontal">
@@ -39,5 +39,3 @@
 </div>
 
 </main>
-
-{{!-- taken out of save a -> href="#userSignInSection" modal-trigger --}}
