--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -11,11 +11,13 @@
         <h3>My Pets</h3>
         <p>Please sign in to access your saved pets.</p>
         <section id=“reload”>
+            {{!-- reload btn to delay displaying of results --}}
     <section id="reload">
   <div class="container">
   <input id="reloadBtn" class="waves-effect waves-light btn-large" type="submit" value="Click to See your Saved Pets" onClick="window.location.reload()">
 </div>
 </section>
+{{!-- display each saved pet --}}
           {{#each saved}}
             <div class="col s12">
                 <div class="card horizontal">
